<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.sx.trackdispatch.viewmodel.HiddenDangerViewModel" />
        <variable
            name="adapter"
            type="com.sx.trackdispatch.adapter.HiddenDangerAdapter" />
        <variable
            name="settingClick"
            type="android.view.View.OnClickListener" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/include_setting"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginTop="@dimen/dp64"
            app:click="@{settingClick}"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp22"
            android:layout_marginRight="@dimen/dp22"
            android:layout_marginTop="@dimen/dp37"
            android:layout_marginBottom="@dimen/dp20"
            android:id="@+id/ll_parent"
            android:orientation="vertical"
            android:background="@drawable/hidden_danger_rc_borde">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp54"
                android:orientation="horizontal"
                android:background="@drawable/hidden_danger_title_bg"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="76.13"
                    android:text="@string/identifier"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75.44"
                    android:text="@string/order_category"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="79.44"
                    android:text="@string/content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="52"
                    android:text="@string/create_person"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:text="@string/executor_or_organization"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="88"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="84"
                    android:text="@string/operation"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/ts18"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="com.kunminx.binding_recyclerview.layout_manager.WrapContentLinearLayoutManager"
                tools:listitem="@layout/item_hidden_danger"
                adapter="@{adapter}"
                notifyCurrentListChanged="@{vm.notifyCurrentListChanged}"
                submitList="@{vm.list}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp50"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginRight="@dimen/dp42"
            android:layout_gravity="end"
            android:background="@drawable/hidden_danger_report_btn">
            <ImageView
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:src="@mipmap/hidden_danger_add"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ts24"
                android:textColor="@color/white"
                android:text="@string/hidden_danger_report"
                android:layout_marginLeft="@dimen/dp15"/>
        </LinearLayout>
    </LinearLayout>
</layout>