<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="adapter"
            type="com.sx.trackdispatch.adapter.FileAdapter" />
        <variable
            name="vm"
            type="com.sx.trackdispatch.viewmodel.DialogTransferOrderConfirmViewModel" />
        <variable
            name="layoutManage"
            type="androidx.recyclerview.widget.GridLayoutManager" />
        <variable
            name="click"
            type="com.sx.trackdispatch.dialog.TransferOrderConfirmDialog.ClickProxy" />
    </data>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dp600"
        android:layout_height="@dimen/dp450"
        android:background="@drawable/shape_white_radius_5"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/transfer_order_confirm"
            android:textColor="@color/c_2495FF"
            android:textSize="@dimen/ts20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_order_no"
            android:textColor="@color/c_787878"
            android:textSize="@dimen/ts17"
            android:layout_marginLeft="@dimen/dp23"
            android:layout_marginTop="@dimen/dp35"
            android:id="@+id/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="第202105060503号"
            android:textColor="@color/c_474747"
            android:textSize="@dimen/ts17"
            app:layout_constraintLeft_toRightOf="@+id/text1"
            android:layout_marginLeft="@dimen/dp16"
            app:layout_constraintTop_toTopOf="@+id/text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确    认："
            android:textColor="@color/c_787878"
            android:textSize="@dimen/ts17"
            android:layout_marginLeft="@dimen/dp23"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp16"
            android:id="@+id/text2"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="@dimen/dp34"
            android:layout_height="@dimen/dp34"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintBottom_toBottomOf="@+id/text2"
            app:layout_constraintLeft_toRightOf="@+id/text2"
            app:layout_constraintTop_toTopOf="@+id/text2"
            android:onClick='@{()->click.checkBox(true)}'
            android:checked="@{vm.confirmeState}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/c_474747"
            android:textSize="@dimen/ts17"
            android:id="@+id/text3"
            app:layout_constraintBottom_toBottomOf="@+id/text2"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="@+id/text2" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="@dimen/dp34"
            android:layout_height="@dimen/dp34"
            android:layout_marginLeft="@dimen/dp20"
            android:gravity="center"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:onClick='@{()->click.checkBox(false)}'
            android:checked="@{!vm.confirmeState}"
            app:layout_constraintBottom_toBottomOf="@+id/text3"
            app:layout_constraintLeft_toRightOf="@+id/text3"
            app:layout_constraintTop_toTopOf="@+id/text3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:textColor="@color/c_474747"
            android:textSize="@dimen/ts17"
            android:id="@+id/text4"
            app:layout_constraintBottom_toBottomOf="@+id/text2"
            app:layout_constraintStart_toEndOf="@+id/checkBox1"
            app:layout_constraintTop_toTopOf="@+id/text2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="备    注："
            android:textColor="@color/c_787878"
            android:textSize="@dimen/ts17"
            android:layout_marginLeft="@dimen/dp23"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp16"
            android:id="@+id/text5"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/dp100"
            android:id="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text5"
            android:inputType="text"
            android:gravity="top"
            android:padding="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp43"
            android:layout_marginRight="@dimen/dp43"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/transfer_order_edtext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="附    件："
            android:textColor="@color/c_787878"
            android:textSize="@dimen/ts17"
            android:layout_marginLeft="@dimen/dp23"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp16"
            android:id="@+id/text6"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="@dimen/dp400"
            app:layout_constraintStart_toEndOf="@+id/text6"
            app:layout_constraintTop_toTopOf="@+id/text6"
            android:id="@+id/recyclerview"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_file"
            adapter="@{adapter}"
            notifyCurrentListChanged="@{vm.notifyCurrentListChanged}"
            app:layoutManager="@{layoutManage}"
            submitList="@{vm.fileList}"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注：仅支持word、Excel、PDF、jpg、png、MP3、MP4文件格式"
            android:textColor="@color/c_aaaaaa"
            android:textSize="@dimen/ts14"
            android:id="@+id/text7"
            android:layout_marginLeft="@dimen/dp23"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp10"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginTop="@dimen/dp20"
            android:paddingBottom="@dimen/dp20">

            <TextView
                android:layout_width="@dimen/dp83"
                android:layout_height="@dimen/dp34"
                android:text="@string/reject"
                android:gravity="center"
                android:textColor="@color/c_2D76FF"
                android:textSize="@dimen/ts17"
                android:background="@drawable/transfer_order_reject_btn"/>

            <TextView
                android:layout_width="@dimen/dp83"
                android:layout_height="@dimen/dp34"
                android:text="@string/confirm"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/ts17"
                android:layout_marginLeft="@dimen/dp20"
                android:background="@drawable/transfer_order_confirm_btn"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>