<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="bean"
            type="com.sx.trackdispatch.model.TransferOrderBean" />
        <variable
            name="click"
            type="android.view.View.OnClickListener" />
        <variable
            name="itemClick"
            type="com.sx.trackdispatch.adapter.TransferOrderAdapter.ItemClickListener" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp28"
        android:paddingLeft="@dimen/dp24"
        android:paddingRight="@dimen/dp24">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/transfer_order_item_borde">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingLeft="@dimen/dp24"
                android:onClick="@{click}">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{"调令编号："+bean.sn+"号"}'
                    android:textColor="@color/c_6DA0FF"
                    android:textSize="@dimen/ts15"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{bean.status}'
                    android:textSize="@dimen/ts14"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/dp20"
                    android:paddingLeft="@dimen/dp7"
                    android:paddingRight="@dimen/dp7"
                    android:paddingTop="@dimen/dp3"
                    android:paddingBottom="@dimen/dp3"
                    android:background='@{bean.status.equals("待确认")?@drawable/transfer_order_status_1ed5e3:bean.status.equals("已确认")?@drawable/transfer_order_status_1ee31e:bean.status.equals("已作废")?@drawable/transfer_order_status_ff2543:@drawable/transfer_order_status_2d76ff}'/>
<!--                    android:background="@drawable/transfer_order_status_1ed5e3"/>-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp20"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ts17"
                    android:textColor="@color/c_979797"
                    android:text="@{bean.createTime}"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/c_6DA0FF"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bean.workContent}"
                android:textColor="@color/c_979797"
                android:textSize="@dimen/ts17"
                android:paddingLeft="@dimen/dp24"
                android:paddingRight="@dimen/dp24"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"/>
            <LinearLayout
                android:layout_width="@dimen/dp65"
                android:layout_height="@dimen/dp24"
                android:orientation="horizontal"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:id="@+id/ll_speak"
                android:background="@drawable/voice_play_btn"
                android:onClick="@{()->itemClick.speak(bean)}">
                <ImageView
                    android:layout_width="@dimen/dp15"
                    android:layout_height="@dimen/dp15"
                    android:src="@mipmap/voice_playback"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1:58"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ts10"
                    android:visibility="gone"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/c_6DA0FF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp62"
                android:paddingTop="@dimen/dp5"
                android:paddingBottom="@dimen/dp5"
                android:visibility='@{bean.status.equals("待确认")?View.VISIBLE:View.GONE}'>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:background="@drawable/transfer_order_confirm_btn"
                    android:onClick="@{()->itemClick.confirm(bean)}"
                    android:textSize="@dimen/ts17"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp18"
                    android:paddingTop="@dimen/dp5"
                    android:paddingBottom="@dimen/dp5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reject"
                    android:textColor="@color/c_2D76FF"
                    android:background="@drawable/transfer_order_reject_btn"
                    android:onClick="@{()->itemClick.reject(bean)}"
                    android:textSize="@dimen/ts17"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp18"
                    android:paddingTop="@dimen/dp5"
                    android:paddingBottom="@dimen/dp5"
                    android:layout_marginLeft="@dimen/dp21"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_execute"
                    android:textColor="@color/white"
                    android:onClick="@{()->itemClick.execute()}"
                    android:background="@drawable/transfer_order_confirm_btn"
                    android:textSize="@dimen/ts17"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp18"
                    android:paddingTop="@dimen/dp5"
                    android:visibility="gone"
                    android:paddingBottom="@dimen/dp5"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>